# yeet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
examples/: constants.py  controllers.py  main.py
examples/models/: article.py
examples/templates/: 404.html  article.html  article_delete.html  article_edit.html  articles.html  base.html  home.html
examples/templates/components/: footer.html  header.html
python_yeet/: app.py  controllers.py  db.py  handlers.py  helpers.py  orm.py
yeet/: app.py  controllers.py  handlers.py  templating.py
yeet/templates/: 404.html
