[tool.poetry]
name = "python_yeet"
version = "1.0.0"
description = "yeet is a simple Python framework"
authors = ["Yakser <iaksanov2044@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
pymysql = "^1.0.2"
cryptography = "^39.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
